syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.hazelcast.jet.examples.grpc";
option java_outer_classname = "EnrichmentProto";
option objc_class_prefix = "HLW";

package helloworld;

service EnrichmentService {
  rpc ProductInfo (ProductInfoRequest) returns (ProductInfoReply) {}
  rpc BrokerInfo (BrokerInfoRequest) returns (BrokerInfoReply) {}
}

message ProductInfoRequest {
  int32 id = 1;
}

message ProductInfoReply {
  string productName = 1;
}

message BrokerInfoRequest {
  int32 id = 1;
}

message BrokerInfoReply {
  string brokerName = 1;
} 
